service-mesh/3-resiliency/fault-injection/abort-fault-injection-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end   
  namespace: sock-shop
spec:
  hosts:
  - front-end
  http:
  - fault:
      abort:
        httpStatus: 401
        percentage:
          value: 100
    route:
    - destination:
        host: front-end
        subset: v1
