service-mesh/3-resiliency/fault-injection/delay-fault-injection-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: carts
  namespace: sock-shop
spec:
  hosts:
  - carts
  http:
  - fault:
      delay:
        fixedDelay: 5s
        percentage:
          value: 100
    route:
    - destination:
        host: carts
        subset: v1
